refactor: Change table names, replace native queries with a non-native (#537)
* refactor: Change table names, replace native queries with a non-native

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

* refactor: Apply fix after code review

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>

---------

Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>